--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,26 @@
 [build-system]
-requires = ["setuptools>=61.0", "requests>=2.26.0"]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "spring-centralized-config-client"
-version = "1.0.1"
+name = "spring_centralized_config_client"
+version = "1.4"
 authors = [
   { name="Himanshu Verma", email="himanshu.v09@gmail.com" },
 ]
 description = "A library to fetch spring centralized config in decrypted flat format."
 readme = "README.md"
 requires-python = ">=3"
+keywords = ["spring", "config", "client", "centralized", "decrypted"]
+dependencies = ["requests>=2.26.0"]
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3.6",
+  "Programming Language :: Python :: 3.7",
+  "Development Status :: 4 - Beta",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Topic :: Software Development :: Libraries :: Java Libraries",
 ]
 
 [project.urls]
